--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "qs": "^6.14.0"
+    "qs": "^6.14.0",
+    "tough-cookie": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
