--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.8.4",
     "body-parser": "^2.2.0",
     "cheerio": "^1.0.0",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "qs": "^6.14.0",
