--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "dependencies": {
     "axios": "^1.8.4",
     "body-parser": "^2.2.0",
+    "chalk": "^4.1.2",
     "cheerio": "^1.0.0",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "morgan": "^1.10.0",
     "qs": "^6.14.0",
     "tough-cookie": "^5.1.2"
   },
