--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^5.1.0",
     "morgan": "^1.10.0",
     "qs": "^6.14.0",
+    "cors": "^2.8.5",
     "tough-cookie": "^5.1.2"
   },
   "devDependencies": {
